--- a/public/index.html
+++ b/public/index.html
@@ -42,16 +42,13 @@
       padding: 20px;
       box-sizing: border-box;
     }
-
     form {
-      /* width: 100%; */
       max-width: 500px;
       padding: 20px;
       background: #fff;
       border-radius: 8px;
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
     }
-
     input[type=text], select, input[type=number] {
       width: 100%;
       padding: 12px 20px;
@@ -64,7 +61,6 @@
       background-color: white;
       background: none;
     }
-
     input[type=submit] {
       width: 100%;
       background-color: #4CAF50;
@@ -76,11 +72,9 @@
       cursor: pointer;
       font-size: 1em;
     }
-
     input[type=submit]:hover {
       background-color: #45a049;
     }
-
     input:focus {
         outline: none;
         box-shadow: 0 0 0 1px black;
@@ -89,26 +83,21 @@
       font-weight: bold;
       font-size: 1.2em;
     }
-
     h2 {
       text-align: center;
       font-size: 2em;
     }
-
     @media (max-width: :00px) {
       body {
         padding: 10px;
       }
-
       form {
         padding: 10px;
       }
-
       input[type=text], select, input[type=number], input[type=submit] {
         padding: 10px 15px;
         font-size: 0.8em;
       }
-
       h2 {
         font-size: 1.5em;
       }
@@ -117,7 +106,6 @@
         font-size: 1em;
       }
     }
-
     .header-img {
       border-radius: 0.5em;
       width: 100%;
@@ -148,9 +136,8 @@
       border-radius: 10px;
       display: block;
     }
-
     .btn-grad:hover {
-      background-position: right center; /* change the direction of the change here */
+      background-position: right center;
       color: #fff;
       text-decoration: none;
     }
@@ -174,26 +161,20 @@
           <option value="12month">1 Year</option>
           <option value="overall">Overall</option>
         </select><br>
-
         <label for="album">Display Artist</label><br>
         <select name="artist" id="artist">
           <option value="true">True</option>
           <option value="false">False</option>
         </select><br>
-
         <label for="album">Display Album</label><br>
         <select name="album" id="album">
           <option value="true">True</option>
           <option value="false">False</option>
         </select><br>
-
         <label for="rows">Rows</label><br>
         <input type="number" id="rows" name="rows" min="2" max="10" value="2"><br>
-
         <label for="columns">Columns</label><br>
         <input type="number" id="columns" name="columns" min="2" max="10" value="2"><br>
-
-
         <input class="btn-grad" type="submit" value="Submit">
       </form>
       <script>
@@ -204,7 +185,6 @@
         });
       </script>
     </main>
-
     <div class="footer" >
       <p>Made with ❤️ by <a href="https://github.com/theden" target="_blank" rel="noopener">TheDen</a> and <a href="https://github.com/BradLewis" target="_blank" rel="noopener">Brad</a></p>
     </div>
