--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <meta property="og:title" content="SongStitch">
     <meta property="og:description" content="Generate an image collage of your most played albums!">
     <meta property="og:image" content="/public/logo.png">
-    <meta property="og:url" content="http://your-website.com">
+    <meta property="og:url" content="https://songstitch.fly.dev/">
     <!-- Canonical URL -->
-    <link rel="canonical" href="http://your-website.com/">
+    <link rel="canonical" href="https://songstitch.fly.dev/">
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
