--- a/public/index.html
+++ b/public/index.html
@@ -29,126 +29,311 @@
     a:visited { color:black;}  /* visited link */
     a:hover {color: #f2f2f2; background: black;}  /* selected link */
     a:active {color: #f2f2f2; background: black;}  /* selected link */
-    html {
-      background-color: #ffffff;
-      background-image: radial-gradient(#f2f2f2 2px, #ffffff 2px);
-      background-size: 40px 40px;
-    }
-    body, input[type='text']  {
-      display: grid;
-      place-items: center;
-      min-height: 100%;
-      font-family: 'Secular One',Poppins, avenir, Helvetica, sans-serif;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-    form {
-      max-width: 500px;
-      padding: 20px;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
-    }
-    input[type=text], select, input[type=number] {
-      width: 100%;
-      padding: 12px 20px;
-      margin: 8px 0;
-      display: inline-block;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      font-size: 1em;
-      background-color: white;
-      background: none;
-    }
-    input[type=submit] {
-      width: 100%;
-      background-color: #4CAF50;
-      color: white;
-      padding: 14px 20px;
-      margin: 8px 0;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 1em;
-    }
-    input[type=submit]:hover {
-      background-color: #45a049;
-    }
-    input:focus {
-        outline: none;
-        box-shadow: 0 0 0 1px black;
-    }
-    label {
-      font-weight: bold;
-      font-size: 1.2em;
-    }
-    h2 {
-      text-align: center;
-      font-size: 2em;
-    }
-    @media (max-width: :00px) {
-      body {
-        padding: 10px;
+      html {
+        background-color: #ffffff;
+        background-image: radial-gradient(#f2f2f2 2px, #ffffff 2px);
+        background-size: 40px 40px;
+      }
+      body, input[type='text']  {
+        display: grid;
+        place-items: center;
+        min-height: 100%;
+        font-family: 'Secular One',Poppins, avenir, Helvetica, sans-serif;
+        padding: 20px;
+        box-sizing: border-box;
       }
       form {
-        padding: 10px;
+        max-width: 500px;
+        padding: 20px;
+        background: #fff;
+        border-radius: 8px;
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.1);
       }
-      input[type=text], select, input[type=number], input[type=submit] {
-        padding: 10px 15px;
-        font-size: 0.8em;
+      input[type=text], select, input[type=number] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-size: 1em;
+        background-color: white;
+        background: none;
+        color: black;
       }
-      h2 {
-        font-size: 1.5em;
-      }
-
-      label {
+      input[type=submit],  input[type=button] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
         font-size: 1em;
       }
-    }
-    .header-img {
-      border-radius: 0.5em;
-      width: 100%;
-      max-width: 40vh;
-      display: block;
-      height: auto;
-      margin: auto;
-    }
+      input[type=submit]:hover {
+        background-color: #45a049;
+      }
+      input:focus {
+        outline: none;
+        box-shadow: 0 0 0 1px black;
+      }
+      label {
+        font-weight: bold;
+        font-size: 1.2em;
+      }
+      h2 {
+        text-align: center;
+        font-size: 2em;
+      }
+      @media (max-width: :00px) {
+        body {
+          padding: 10px;
+        }
+        form {
+          padding: 10px;
+        }
+        input[type=text], select, input[type=number], input[type=submit] {
+          padding: 10px 15px;
+          font-size: 0.8em;
+        }
+        h2 {
+          font-size: 1.5em;
+        }
 
-    .footer {
-      text-align: center;
-      text-align: -webkit-center;
-    }
+        label {
+          font-size: 1em;
+        }
+      }
+      .header-img {
+        border-radius: 0.5em;
+        width: 100%;
+        max-width: 40vh;
+        display: block;
+        height: auto;
+        margin: auto;
+      }
 
-    .footer a {
-    }
+      .footer {
+        text-align: center;
+        text-align: -webkit-center;
+      }
 
-    .btn-grad {
-      background-image: linear-gradient(to right, #DA22FF 0%, #9733EE  51%, #DA22FF  100%);
-      margin: 10px;
-      padding: 15px 45px;
-      text-align: center;
-      text-transform: uppercase;
-      transition: 0.5s;
-      background-size: 200% auto;
-      color: white;
-      box-shadow: 0 0 20px #eee;
-      border-radius: 10px;
-      display: block;
-    }
-    .btn-grad:hover {
-      background-position: right center;
-      color: #fff;
-      text-decoration: none;
-    }
-    .asterisk {
-      color: #ff0000;
-      font-weight: normal;
-    }
-    .nonbold {
-      font-weight: normal;
-      color: grey;
-    }
+      .footer a {
+      }
+
+      .btn-grad {
+        background-image: linear-gradient(to right, #DA22FF 0%, #9733EE  51%, #DA22FF  100%);
+        margin: 10px;
+        padding: 15px 45px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: white;
+        box-shadow: 0 0 20px #eee;
+        border-radius: 10px;
+        display: block;
+      }
+      .btn-grad:hover {
+        background-position: right center;
+        color: #fff;
+        text-decoration: none;
+      }
+      .asterisk {
+        color: #ff0000;
+        font-weight: normal;
+      }
+      .nonbold {
+        font-weight: normal;
+        color: grey;
+      }
+
+      /* checkbox */
+      @supports (-webkit-appearance: none) or (-moz-appearance: none) {
+        .checkbox-wrapper input[type=checkbox] {
+          --active: #275EFE;
+          --active-inner: #fff;
+          --focus: 2px rgba(39, 94, 254, .3);
+          --border: #BBC1E1;
+          --border-hover: #275EFE;
+          --background: #fff;
+          --disabled: #F6F8FF;
+          --disabled-inner: #E1E6F9;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          height: 21px;
+          outline: none;
+          display: inline-block;
+          vertical-align: top;
+          position: relative;
+          margin: 0;
+          cursor: pointer;
+          border: 1px solid var(--bc, var(--border));
+          background: var(--b, var(--background));
+          transition: background 0.3s, border-color 0.3s, box-shadow 0.2s;
+        }
+        .checkbox-wrapper input[type=checkbox]:after {
+          content: "";
+          display: block;
+          left: 0;
+          top: 0;
+          position: absolute;
+          transition: transform var(--d-t, 0.3s) var(--d-t-e, ease), opacity var(--d-o, 0.2s);
+        }
+        .checkbox-wrapper input[type=checkbox]:checked {
+          --b: var(--active);
+          --bc: var(--active);
+          --d-o: .3s;
+          --d-t: .6s;
+          --d-t-e: cubic-bezier(.2, .85, .32, 1.2);
+        }
+        .checkbox-wrapper input[type=checkbox]:disabled {
+          --b: var(--disabled);
+          cursor: not-allowed;
+          opacity: 0.9;
+        }
+        .checkbox-wrapper input[type=checkbox]:disabled:checked {
+          --b: var(--disabled-inner);
+          --bc: var(--border);
+        }
+        .checkbox-wrapper input[type=checkbox]:disabled + label {
+          cursor: not-allowed;
+        }
+        .checkbox-wrapper input[type=checkbox]:hover:not(:checked):not(:disabled) {
+          --bc: var(--border-hover);
+        }
+        .checkbox-wrapper input[type=checkbox]:focus {
+          box-shadow: 0 0 0 var(--focus);
+        }
+        .checkbox-wrapper input[type=checkbox]:not(.switch) {
+          width: 21px;
+        }
+        .checkbox-wrapper input[type=checkbox]:not(.switch):after {
+          opacity: var(--o, 0);
+        }
+        .checkbox-wrapper input[type=checkbox]:not(.switch):checked {
+          --o: 1;
+        }
+        .checkbox-wrapper input[type=checkbox] + label {
+          display: inline-block;
+          vertical-align: middle;
+          cursor: pointer;
+          margin-left: 4px;
+        }
+
+        .checkbox-wrapper input[type=checkbox]:not(.switch) {
+          border-radius: 7px;
+        }
+        .checkbox-wrapper input[type=checkbox]:not(.switch):after {
+          width: 5px;
+          height: 9px;
+          border: 2px solid var(--active-inner);
+          border-top: 0;
+          border-left: 0;
+          left: 7px;
+          top: 4px;
+          transform: rotate(var(--r, 20deg));
+        }
+        .checkbox-wrapper input[type=checkbox]:not(.switch):checked {
+          --r: 43deg;
+        }
+      }
+
+      .checkbox-wrapper * {
+        box-sizing: inherit;
+      }
+      .checkbox-wrapper *:before,
+      .checkbox-wrapper *:after {
+        box-sizing: inherit;
+      }
+      .checkbox-wrapper {
+        padding-top: 1em;
+      }
+      fieldset {
+        border:  1px solid #ccc;
+        border-radius: 4px;
+      }
+
+
+      .btn-grad-embed {
+        background-image: linear-gradient(to right, #DD5E89 0%, #F7BB97  51%, #DD5E89  100%);
+        margin: 10px;
+        padding: 15px 45px;
+        text-align: center;
+        text-transform: uppercase;
+        transition: 0.5s;
+        background-size: 200% auto;
+        color: white;            
+        box-shadow: 0 0 20px #eee;
+        border-radius: 10px;
+        display: block;
+      }
+
+      .btn-grad-embed:hover {
+        background-position: right center; /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+      }
+
+      .modal {
+        display: none; 
+        position: fixed;
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.4); 
+      }
+
+      .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 60%;
+        border-radius: 4px;
+      }
+
+      .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
+      pre {
+        overflow-x: auto;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
+      .btn-copy {
+        font-size: 1em;
+        padding: 10px;
+        color: #fff;
+        background-color: #4CAF50;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .btn-copy:hover {
+        background-color: #45a049;
+      }
+
     </style>
   </head>
   <body>
@@ -168,27 +353,86 @@
           <option value="12month">1 Year</option>
           <option value="overall">All Time</option>
         </select><br>
-        <label for="album">Display Artist Name</label><br>
-        <select name="artist" id="artist">
-          <option value="true">Yes</option>
-          <option value="false">No</option>
-        </select><br>
-        <label for="album">Display Album Name</label><br>
-        <select name="album" id="album">
-          <option value="true">Yes</option>
-          <option value="false">No</option>
-        </select><br>
-        <label for="album">Display Play Count</label><br>
-        <select name="playcount" id="playcount">
-          <option value="true">Yes</option>
-          <option value="false">No</option>
-        </select><br>
-        <label for="rows">Number of Rows <span class="nonbold">(max. 10)</span></label><br>
-        <input type="number" id="rows" name="rows" min="1" max="10" value="3"><br>
-        <label for="columns">Number of Columns <span class="nonbold">(max. 10)</span></label><br>
-        <input type="number" id="columns" name="columns" min="1" max="10" value="3"><br>
+        <fieldset>
+          <legend>Collage Options</legend>
+          <div class="checkbox-wrapper">
+            <input checked value="true" name="artist" id="artist" type="checkbox" onclick="updateValue(this)">
+            <label for="artist">Display Artist Name</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input checked value="true" name="album" id="album" type="checkbox" onclick="updateValue(this)">
+            <label for="album">Display Album Name</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input checked value="true" name="playcount" id="playcount" type="checkbox" onclick="updateValue(this)">
+            <label for="playcount">Display Play Count</label>
+          </div>
+          <br>
+          <label for="rows">Number of Rows <span class="nonbold">(max. 10)</span></label><br>
+          <input inputmode="decimal" type="number" pattern="\d*" id="rows" name="rows" min="1" max="10" value="3"><br>
+          <label inputmode="decimal" for="columns">Number of Columns <span class="nonbold">(max. 10)</span></label><br>
+          <input type="number" pattern="\d*" id="columns" name="columns" min="1" max="10" value="3"><br>
+        </fieldset>
         <input class="btn-grad" type="submit" value="Generate">
+        <input class="btn-grad-embed" type="button" value="Embed" onclick="embedUrl()">
       </form>
+      <div id="myModal" class="modal">
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <pre id="embedUrl" style="white-space: pre-wrap; word-wrap: break-word;"></pre>
+          <button class="btn-copy" onclick="copyToClipboard()">Copy to Clipboard</button>
+        </div>
+      </div>
+      <script>
+        function embedUrl() {
+          var form = document.getElementById('form');
+          var action = form.action;
+          var elems = form.elements;
+          var url = action;
+          var first = true;
+          for(var i = 0; i < elems.length; i++) {
+            if(elems[i].type === "submit") continue;
+            if(first) {
+              url += '?';
+              first = false;
+            } else {
+              url += '&';
+            }
+            url += elems[i].name + '=' + encodeURIComponent(elems[i].value);
+            var embedData = '<img class="songstitch-collage" src="' + url + '">';
+          }
+          document.getElementById('embedUrl').textContent = embedData;
+          modal.style.display = "block";
+          return false; // prevent the form from submitting
+        }
+
+        function copyToClipboard() {
+          var urlText = document.getElementById('embedUrl').textContent;
+          navigator.clipboard.writeText(urlText).then(function() {
+            console.log('Copied to clipboard');
+          }).catch(function() {
+            console.error('Failed to copy text');
+          });
+        }
+
+        // Get the modal
+        var modal = document.getElementById("myModal");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+          modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+          if (event.target == modal) {
+            modal.style.display = "none";
+          }
+        }
+      </script>
       <script>
         var username = document.querySelector('#username');
         username.value = localStorage.getItem('username') || '';
@@ -202,20 +446,31 @@
         <span><a href="https://github.com/theden" target="_blank" rel="noopener">TheDen</a></span>
         <span><a href="https://github.com/BradLewis" target="_blank" rel="noopener">BradLewis</a></span>
       </p>
-  <script>
-    window.onload = function() {
-      var p = document.getElementById('links');
-      var spans = p.getElementsByTagName('span');
-      var spanArr = Array.prototype.slice.call(spans);
-      spanArr.sort(function() { return 0.5 - Math.random() });
-      spanArr.forEach(function(span) {
-        p.appendChild(span); // This will move the <span> element (containing an <a> tag) to the end of the list.
-      });
-      // We need to adjust the "and" position after the first link
-      var andNode = document.createTextNode(" and ");
-      p.insertBefore(andNode, p.children[1]);
-    }
-  </script>
+      <script>
+        window.onload = function() {
+          document.getElementById("artist").value = "true";
+          document.getElementById("album").value = "true";
+          document.getElementById("playcount").value = "true";
+
+        }
+        function updateValue(checkbox) {
+          checkbox.value = checkbox.checked ? "true" : "false";
+        }
+      </script>
+      <script>
+        window.onload = function() {
+          var p = document.getElementById('links');
+          var spans = p.getElementsByTagName('span');
+          var spanArr = Array.prototype.slice.call(spans);
+          spanArr.sort(function() { return 0.5 - Math.random() });
+          spanArr.forEach(function(span) {
+            p.appendChild(span); // This will move the <span> element (containing an <a> tag) to the end of the list.
+          });
+          // We need to adjust the "and" position after the first link
+          var andNode = document.createTextNode(" and ");
+          p.insertBefore(andNode, p.children[1]);
+        }
+      </script>
 
     </div>
   </body>
