max 15 frontend, 20 internal

--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,10 @@
             <label for="playcount">Display Play Count</label>
           </div>
           <br>
-          <label for="rows">Number of Rows <span class="nonbold">(max. 10)</span></label><br>
-          <input inputmode="decimal" type="number" pattern="\d*" id="rows" name="rows" min="1" max="10" value="3"><br>
-          <label inputmode="decimal" for="columns">Number of Columns <span class="nonbold">(max. 10)</span></label><br>
-          <input type="number" pattern="\d*" id="columns" name="columns" min="1" max="10" value="3"><br>
+          <label for="rows">Number of Rows <span class="nonbold">(max. 15</span></label><br>
+          <input inputmode="decimal" type="number" pattern="\d*" id="rows" name="rows" min="1" max="15" value="3"><br>
+          <label inputmode="decimal" for="columns">Number of Columns <span class="nonbold">(max. 15)</span></label><br>
+          <input type="number" pattern="\d*" id="columns" name="columns" min="1" max="15" value="3"><br>
         </fieldset>
         <input name="submit" class="btn-grad" type="submit" value="Generate">
         <input name="embed" class="btn-grad-embed" type="button" value="embed" onclick="embedUrl()">
