--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SongStitch</title>
     <link rel="stylesheet" href="/public/style.css">
+     <link rel="author" href="/humans.txt" />
     <meta name="description" content="Generate an image collage of your most played albums!">
     <meta name="keywords" content="lastfm, collage, image, music, albums">
     <!-- Social Media Meta Tags -->
