--- a/public/index.html
+++ b/public/index.html
@@ -59,20 +59,20 @@
           </div>
           <br>
           <label for="rows">Number of Rows <span class="nonbold">(max. 20)</span></label><br>
-          <input inputmode="decimal" type="number" pattern="\d*" id="rows" name="rows" min="1" max="20" value="3" oninput="maintainAspectRatio(this)"><br>
+          <input inputmode="decimal" type="number" pattern="\d*" id="rows" name="rows" min="1" max="20" value="3" oninput="validate(this)"><br>
           <label inputmode="decimal" for="columns">Number of Columns <span class="nonbold">(max. 20)</span></label><br>
-          <input type="number" pattern="\d*" id="columns" name="columns" min="1" max="20" value="3" oninput="maintainAspectRatio(this)"><br>
+          <input type="number" pattern="\d*" id="columns" name="columns" min="1" max="20" value="3" oninput="validate(this)"><br>
           <div class="checkbox-wrapper advanced">
             <input value="false" name="advanced" id="advanced" type="checkbox" onclick="toggleAdvancedOptions(this)">
             <label for="advanced">Show Advanced Options</label>
           </div>
           <div id="advanced-options" style="display: none;">
           <label  for="width">Generated Image Width <span class="nonbold">(in pixels)</span></label><br>
-          <input inputmode="decimal" type="number" pattern="\d*" id="width" name="width" min="10" max="10000" oninput="maintainAspectRatio(this)"><br>
+          <input inputmode="decimal" type="number" pattern="\d*" id="width" name="width" min="10" max="10000" oninput="validate(this);"><br>
           <label for="height">Generated Image Height <span class="nonbold">(in pixels)</span></label><br>
-          <input inputmode="decimal" type="number" pattern="\d*" id="height" name="height" min="10" max="10000" oninput="maintainAspectRatio(this)"><br>
+          <input inputmode="decimal" type="number" pattern="\d*" id="height" name="height" min="10" max="10000" oninput="validate(this);"><br>
           <div class="checkbox-wrapper aspect-ratio">
-            <input id="aspectRatio" name="aspectRatio" type="checkbox" onclick="maintainAspectRatio(this)">
+            <input id="aspectRatio" name="aspectRatio" type="checkbox" onclick="validate(this)">
             <label for="aspectRatio">Maintain Aspect Ratio</label>
           </div>
         </fieldset>
@@ -82,7 +82,7 @@
         <input name="submit" class="btn-grad" type="submit" value="Generate">
         <input name="embed" class="btn-grad-embed" type="button" value="embed" onclick="embedUrl()">
       </form>
-      <div id="myModal" class="modal">
+      <div id="modal" class="modal">
         <div class="modal-content">
           <p class="modal-text">Use this HTML code to embed your configured collage. The latest collage will automatically be shown whenever viewed! 🎉</P>
           <span class="close">&times;</span>
