add lossy compress option + add gc env to makefile

--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,10 @@
               <input id="aspectRatio" name="aspectRatio" type="checkbox" onclick="validate(this)">
               <label for="aspectRatio">Maintain Aspect Ratio</label>
             </div>
+            <div class="checkbox-wrapper">
+              <input id="compress" name="compress" type="checkbox" value="" onclick="updateValue(this)">
+              <label for="compress">Lossy Compress Image</label>
+            </div>
         </fieldset>
         <div class="loader-container">
           <div class="loader"></div>
