explicitly set width and height for image

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <main class="main">
-      <img src="/public/logo.png" class="header-img" alt="SongStitch Logo">
+      <img src="/public/logo.png" class="header-img" alt="SongStitch Logo" width="418" height="100">
       <h1>Last.fm Collage Generator</h1>
       <p class="subheading">Generate an image collage of your most played albums!</p>
       <form action="/collage" method="get" id="form">
