set maxvalues based on input selection

--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,8 @@
           </div>
           <br />
           <label for="rows"
-            >Number of Rows <span class="nonbold">(max. 15)</span></label
+            >Number of Rows
+            <span class="nonbold maxvalues">(max. 15)</span></label
           ><br />
           <input
             inputmode="decimal"
@@ -139,7 +140,8 @@
             oninput="validate(this)"
           /><br />
           <label inputmode="decimal" for="columns"
-            >Number of Columns <span class="nonbold">(max. 15)</span></label
+            >Number of Columns
+            <span class="nonbold maxvalues">(max. 15)</span></label
           ><br />
           <input
             type="number"
