update page description

--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     <link rel="author" href="/humans.txt" />
     <meta
       name="description"
-      content="Generate an image collage of your most played albums!"
+      content="Generate an image collage of your most played albums, artists, or tracks!"
     />
     <meta name="keywords" content="lastfm, collage, image, music, albums" />
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="SongStitch" />
     <meta
       property="og:description"
-      content="Generate an image collage of your most played albums!"
+      content="Generate an image collage of your most played albums, artists, or tracks!"
     />
     <meta property="og:image" content="/public/logo.png" />
     <meta property="og:url" content="https://songstitch.art/" />
