add show track option + refactor/cleanup of query states

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,16 @@
         ><br />
         <fieldset id="fieldset">
           <legend>Collage Options</legend>
+          <div style="display: none" class="checkbox-wrapper track-checkbox">
+            <input
+              value=""
+              name="track"
+              id="track"
+              type="checkbox"
+              onclick="updateValue(this)"
+            />
+            <label for="track">Display Track Name</label>
+          </div>
           <div class="checkbox-wrapper">
             <input
               checked
