set track default value to false

--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
           <legend>Collage Options</legend>
           <div style="display: none" class="checkbox-wrapper track-checkbox">
             <input
-              value=""
+              value="false"
               name="track"
               id="track"
               type="checkbox"
