--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
               id="track"
               type="checkbox"
               onclick="updateValue(this)"
+              class="switch"
             />
             <label for="track">Display Track Name</label>
           </div>
@@ -108,6 +109,7 @@
               id="artist"
               type="checkbox"
               onclick="updateValue(this)"
+              class="switch"
             />
             <label for="artist">Display Artist Name</label>
           </div>
@@ -119,6 +121,7 @@
               id="album"
               type="checkbox"
               onclick="updateValue(this)"
+              class="switch"
             />
             <label for="album">Display Album Name</label>
           </div>
@@ -130,6 +133,7 @@
               id="playcount"
               type="checkbox"
               onclick="updateValue(this)"
+              class="switch"
             />
             <label for="playcount">Display Play Count</label>
           </div>
@@ -170,6 +174,7 @@
               id="advanced"
               type="checkbox"
               onclick="toggleAdvancedOptions(this)"
+              class="switch"
             />
             <label for="advanced">Show Advanced Options</label>
           </div>
@@ -181,6 +186,7 @@
                 id="fontsize-checkbox"
                 type="checkbox"
                 onclick="toggleFontSize(this)"
+                class="switch"
               />
               <label for="fontsize-checkbox">Set Text Font Size </label>
             </div>
@@ -199,6 +205,7 @@
                 id="image-resolution"
                 type="checkbox"
                 onclick="toggleImageResolution(this)"
+                class="switch"
               />
               <label for="image-resolution">Set Image Resolution</label>
             </div>
@@ -237,6 +244,7 @@
                   name="aspectRatio"
                   type="checkbox"
                   onclick="validate(this)"
+                  class="switch"
                 />
                 <label for="aspectRatio">Maintain Aspect Ratio</label>
               </div>
@@ -248,6 +256,7 @@
                 type="checkbox"
                 value=""
                 onclick="updateValue(this)"
+                class="switch"
               />
               <label for="compress">Lossy Compress Image</label>
             </div>
