make unselected checkboxes have grey text

--- a/public/index.html
+++ b/public/index.html
@@ -249,7 +249,7 @@
                 <label for="aspectRatio">Maintain Aspect Ratio</label>
               </div>
             </div>
-            <div class="checkbox-wrapper">
+            <div class="checkbox-wrapper compress">
               <input
                 id="compress"
                 name="compress"
