--- a/public/support.html
+++ b/public/support.html
@@ -54,8 +54,8 @@
       <h1>Support</h1>
       <h3 style="text-align: center">Thank you for using SongStitch</h3>
       <h4 style="text-align: center">
-        If you have any issues or questions, please contact us
-        at <a href="mailto:songstitchsupport@theden.sh"
+        If you have any issues or questions, please contact us at
+        <a href="mailto:songstitchsupport@theden.sh"
           >supportsongstitch@theden.sh</a
         >
         or create a
