simplify support page (#82)
* simplify support page

--- a/public/support.html
+++ b/public/support.html
@@ -42,45 +42,6 @@
     <!-- manifest -->
     <link rel="manifest" href="/public/site.webmanifest" />
   </head>
-  <style>
-    .form-container {
-      text-align: center;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      width: 300px;
-      margin: 0 auto;
-    }
-
-    .form-container label {
-      display: block;
-      text-align: left;
-      margin-bottom: 5px;
-    }
-
-    .form-container input[type='text'],
-    .form-container input[type='email'],
-    .form-container textarea {
-      width: 100%;
-      padding: 8px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-
-    .form-container input[type='submit'] {
-      background-color: #4caf50;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .form-container input[type='submit']:hover {
-      background-color: #45a049;
-    }
-  </style>
   <body>
     <main class="main">
       <img
@@ -93,45 +54,15 @@
       <h1>Support</h1>
       <h3 style="text-align: center">Thank you for using SongStitch</h3>
       <h4 style="text-align: center">
-        If you have any issues, please contact us
-      </h4>
-      <div class="form-container">
-        <form
-          action="mailto:songstitchsupport@theden.sh"
-          method="post"
-          enctype="text/plain"
+        If you have any issues or questions, please contact us at
+        <a href="mailto:songstitchsupport@theden.sh"
+          >supportsongstitch@theden.sh</a
         >
-          <label style="text-align: center" for="name">Name</label>
-          <input
-            type="text"
-            id="name"
-            name="name"
-            required
-            placeholder="Your Name"
-          />
-          <br /><br />
-          <label style="text-align: center" for="email">Email</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            required
-            placeholder="Your Email"
-          />
-          <br /><br />
-          <label style="text-align: center" for="message">Message</label><br />
-          <textarea
-            id="message"
-            name="message"
-            rows="5"
-            cols="30"
-            required
-            placeholder="Your Message"
-          ></textarea>
-          <br /><br />
-          <input type="submit" value="Submit" />
-        </form>
-      </div>
+        or create a
+        <a href="https://github.com/SongStitch/song-stitch/issues"
+          >GitHub issue</a
+        >
+      </h4>
     </main>
   </body>
 </html>
