make the logo a link to /

--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,17 @@
   </head>
   <body>
     <main class="main">
-      <img
-        src="/public/logo.png"
-        class="header-img"
-        alt="SongStitch Logo"
-        width="418"
-        height="100"
-      />
+      <div class="header-img-container">
+        <a class="img-link" href="/">
+          <img
+            src="/public/logo.png"
+            class="header-img"
+            alt="SongStitch Logo"
+            width="418"
+            height="100"
+          />
+        </a>
+      </div>
       <h1>Last.fm Collage Generator</h1>
       <p class="subheading">
         Generate an image collage of your most played albums, artists, or
