fix support page

--- a/public/support.html
+++ b/public/support.html
@@ -44,13 +44,17 @@
   </head>
   <body>
     <main class="main">
-      <img
-        src="/public/logo.png"
-        class="header-img"
-        alt="SongStitch Logo"
-        width="418"
-        height="100"
-      />
+      <div class="header-img-container">
+        <a class="img-link" href="/">
+          <img
+            src="/public/logo.png"
+            class="header-img"
+            alt="SongStitch Logo"
+            width="418"
+            height="100"
+          />
+        </a>
+      </div>
       <h1>Support</h1>
       <h3 style="text-align: center">Thank you for using SongStitch</h3>
       <h4 style="text-align: center">
