add iOS appstore icon

--- a/public/index.html
+++ b/public/index.html
@@ -294,15 +294,36 @@
       </div>
     </main>
     <div class="footer">
+      <p class="appstore-container">
+        <a
+          href="https://apps.apple.com/au/app/songstitch/id6450189672"
+          target="_blank"
+          rel="noopener"
+        >
+          <img
+            class="appstore-icon"
+            src="/public/appstore_icon.png"
+            alt="iOS App store link"
+          />
+        </a>
+      </p>
       <p id="links">
         Made with ❤️ by
         <span
-          ><a href="https://github.com/theden" target="_blank" rel="noopener"
+          ><a
+            class="credits"
+            href="https://github.com/theden"
+            target="_blank"
+            rel="noopener"
             >TheDen</a
           ></span
         >
         <span
-          ><a href="https://github.com/BradLewis" target="_blank" rel="noopener"
+          ><a
+            class="credits"
+            href="https://github.com/BradLewis"
+            target="_blank"
+            rel="noopener"
             >BradLewis</a
           ></span
         >
@@ -345,8 +366,6 @@
           </svg>
         </a>
       </p>
-
-      <p></p>
     </div>
 
     <script src="/public/scripts.js"></script>
