--- a/public/support.html
+++ b/public/support.html
@@ -17,7 +17,7 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta property="og:image" content="/public/logo.png" />
+    <meta property="og:image" content="/public/songstitch_logo.png" />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
@@ -47,7 +47,7 @@
       <div class="header-img-container">
         <a class="img-link" href="/">
           <img
-            src="/public/logo.png"
+            src="/public/songstitch_logo.png"
             class="header-img"
             alt="SongStitch Logo"
             width="418"
