--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta property="og:image" content="/public/logo.png" />
+    <meta property="og:image" content="/public/songstitch_logo.png" />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
@@ -47,7 +47,7 @@
       <div class="header-img-container">
         <a class="img-link" href="/">
           <img
-            src="/public/logo.png"
+            src="/public/songstitch_logo.png"
             class="header-img"
             alt="SongStitch Logo"
             width="418"
@@ -55,21 +55,19 @@
           />
         </a>
       </div>
-      <h1>Last.fm Collage Generator</h1>
       <p class="subheading">
-        Generate an image collage of your most played albums, artists, or
-        tracks!
+        Share your most played Last.FM music with an image collage!
       </p>
       <form action="/collage" method="get" id="form">
-        <label for="username"
-          >Your Last.fm Username <span class="asterisk">*</span></label
+        <label class="form-heading" for="username"
+        >Generate a collage for</label
         >
         <br />
         <input
           required
           autofocus
           autocomplete="on"
-          placeholder="Last.fm username"
+          placeholder="*Last.FM username"
           title="Username must be between 2 to 15 characters, begin with a letter and contain only letters, numbers, '_' or '-'"
           pattern="^[a-zA-Z][a-zA-Z0-9_-]{1,14}$"
           type="text"
@@ -77,23 +75,23 @@
           name="username"
         />
         <br />
-        <label for="method">Type of Collage</label><br />
+        <label class="form-heading" for="method">With</label><br />
         <select name="method" id="method" onchange="checkCollageValue()">
           <option value="album">Top Albums</option>
           <option value="artist">Top Artists</option>
           <option value="track">Top Tracks</option></select
         ><br />
-        <label for="period">Period of Time</label><br />
+        <label class="form-heading" for="period">For the time period</label><br />
         <select name="period" id="period">
           <option value="7day">7 Days</option>
           <option value="1month">1 Month</option>
           <option value="3month">3 Months</option>
           <option value="6month">6 Months</option>
-          <option value="12month">1 Year</option>
+          <option value="12month">Year</option>
           <option value="overall">All Time</option></select
         ><br />
         <fieldset id="fieldset">
-          <legend>Collage Options</legend>
+          <legend class="legend">Collage Options</legend>
           <div style="display: none" class="checkbox-wrapper track-checkbox">
             <input
               value="false"
