--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
       </p>
       <form action="/collage" method="get" id="form">
         <label class="form-heading" for="username"
-        >Generate a collage for</label
+          >Generate a collage for</label
         >
         <br />
         <input
@@ -81,7 +81,8 @@
           <option value="artist">Top Artists</option>
           <option value="track">Top Tracks</option></select
         ><br />
-        <label class="form-heading" for="period">For the time period</label><br />
+        <label class="form-heading" for="period">For the time period</label
+        ><br />
         <select name="period" id="period">
           <option value="7day">7 Days</option>
           <option value="1month">1 Month</option>
