improve username input

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
           autocomplete="on"
           placeholder="*Last.FM username"
           title="Username must be between 2 to 15 characters, begin with a letter and contain only letters, numbers, '_' or '-'"
-          pattern="^[a-zA-Z][a-zA-Z0-9_-]{1,14}$"
+          pattern="^[a-zA-Z][a-zA-Z0-9_\-]{1,14}$"
           type="text"
           id="username"
           name="username"
