refactor folder struct + add regular font

--- a/public/support.html
+++ b/public/support.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SongStitch</title>
-    <link rel="stylesheet" href="/public/style.css" />
+    <link rel="stylesheet" href="/public/style/style.css" />
     <link rel="author" href="/humans.txt" />
     <meta
       name="description"
@@ -17,7 +17,7 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta property="og:image" content="/public/songstitch_logo.png" />
+    <meta property="og:image" content="/public/images/songstitch_background.png" />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
@@ -47,7 +47,7 @@
       <div class="header-img-container">
         <a class="img-link" href="/">
           <img
-            src="/public/songstitch_logo.png"
+            src="/public/images/songstitch_logo.png"
             class="header-img"
             alt="SongStitch Logo"
             width="418"
