--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SongStitch</title>
-    <link rel="stylesheet" href="/public/style.css" />
+    <link rel="stylesheet" href="/public/style/style.css" />
     <link rel="author" href="/humans.txt" />
     <meta
       name="description"
@@ -17,7 +17,10 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta property="og:image" content="/public/songstitch_logo.png" />
+    <meta
+      property="og:image"
+      content="/public/images/songstitch_background.png"
+    />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
@@ -47,7 +50,7 @@
       <div class="header-img-container">
         <a class="img-link" href="/">
           <img
-            src="/public/songstitch_logo.png"
+            src="/public/images/songstitch_logo.png"
             class="header-img"
             alt="SongStitch Logo"
             width="418"
@@ -301,7 +304,7 @@
         >
           <img
             class="appstore-icon"
-            src="/public/appstore_icon.png"
+            src="/public/images/appstore_icon.png"
             alt="iOS App store link"
           />
         </a>
@@ -367,6 +370,6 @@
       </p>
     </div>
 
-    <script src="/public/scripts.js"></script>
+    <script src="/public/scripts/scripts.js"></script>
   </body>
 </html>
