--- a/public/support.html
+++ b/public/support.html
@@ -17,7 +17,10 @@
       property="og:description"
       content="Generate an image collage of your most played albums, artists, or tracks!"
     />
-    <meta property="og:image" content="/public/images/songstitch_background.png" />
+    <meta
+      property="og:image"
+      content="/public/images/songstitch_background.png"
+    />
     <meta property="og:url" content="https://songstitch.art/" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://songstitch.art/" />
