--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
           <legend class="legend">Collage Options</legend>
           <div style="display: none" class="checkbox-wrapper track-checkbox">
             <input
-              value="false"
+              value="true"
               name="track"
               id="track"
               type="checkbox"
