default track to be checked

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
           <legend class="legend">Collage Options</legend>
           <div style="display: none" class="checkbox-wrapper track-checkbox">
             <input
+              checked
               value="true"
               name="track"
               id="track"
