Fix bug where checkbox values were incorrect on page reloads (#97)
* Fix bug where checkbox values were incorrect on page reloads

* Fix issue with show track being set when clicking generate

* default track to be checked

---------

Co-authored-by: TheDen <deniskhoshaba@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,8 @@
           <legend class="legend">Collage Options</legend>
           <div style="display: none" class="checkbox-wrapper track-checkbox">
             <input
-              value="false"
+              checked
+              value="true"
               name="track"
               id="track"
               type="checkbox"
