add shareable link + general styling cleanup

--- a/public/support.html
+++ b/public/support.html
@@ -62,11 +62,13 @@
       <h3 style="text-align: center">Thank you for using SongStitch</h3>
       <h4 style="text-align: center">
         If you have any issues or questions, please contact us at
-        <a href="mailto:songstitchsupport@theden.sh"
+        <a class="href-links" href="mailto:songstitchsupport@theden.sh"
           >supportsongstitch@theden.sh</a
         >
         or create a
-        <a href="https://github.com/SongStitch/song-stitch/issues"
+        <a
+          class="href-links"
+          href="https://github.com/SongStitch/song-stitch/issues"
           >GitHub issue</a
         >
       </h4>
