--- a/ui/index.html
+++ b/ui/index.html
@@ -2,8 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="author" href="/humans.txt" />
+    <meta
+      name="description"
+      content="Generate an image collage of your most played albums, artists, or tracks!"
+    />
+    <meta name="keywords" content="lastfm, collage, image, music, albums" />
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="SongStitch" />
+    <meta
+      property="og:description"
+      content="Generate an image collage of your most played albums, artists, or tracks!"
+    />
+    <meta
+      property="og:image"
+      content="/src/assets/images/songstitch_background.png"
+    />
+    <meta property="og:url" content="https://songstitch.art/" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://songstitch.art/" />
+    <!-- Favicons -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/src/assets/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/src/assets/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/src/assets/apple-touch-icon.png"
+    />
+    <!-- manifest -->
+    <link rel="manifest" href="/src/assets/site.webmanifest" />
     <title>SongStitch</title>
   </head>
   <body>
